--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting to https://tiqr.org</title>
-    <meta http-equiv="refresh" content="0; URL=https://tirq.org">
+    <meta http-equiv="refresh" content="0; URL=https://tiqr.org">
   </head>
 
   <link rel="canonical" href="https://tiqr.org">
